--- a/css/styles.css
+++ b/css/styles.css
@@ -563,6 +563,7 @@ background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(121,9,9,0) 35%,
     color: #E4003B;
     font-weight: 600;
     font-size: 10rem;
+    line-height: 12rem;
     margin: 0px;
 }
 
@@ -581,4 +582,145 @@ background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(121,9,9,0) 35%,
 .carousel-num .num {
     border-bottom: 1px solid #E4003B;
     font-size: 3rem;
+}
+
+
+#adviceh {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.mode-text {
+    position: absolute;
+    bottom: 0px;
+    background-color: #EDF0F2;
+    padding: 40px;
+    max-width: 420px;
+}
+
+.mode-toggle {
+    display: flex;
+    align-items: flex-end;
+    margin:0px;
+}
+
+.mode-toggle:hover {
+    cursor: pointer;
+}
+
+.mode-toggle h6{
+    margin:0px;
+    font-weight: 600;
+}
+
+#mode-cross{
+    width: 28px;
+    height: 28px;
+    margin-right: 50px
+}
+
+
+
+#gallery {
+    margin-top: 100px;
+    padding: 0px 160px 0px 160px;
+}
+
+.tent-img img {
+    width: 90%;
+    height: auto;
+}
+
+.tent-img {
+    position: relative;
+}
+
+.yt-icon {
+    position: absolute;
+    top: 12px;
+    left: 30px;
+}
+
+.kettle-img img {
+    width: 90%;
+    height: auto;
+}
+
+.kettle-img {
+    position: relative;
+}
+
+.ga-icon {
+    position: absolute;
+    top: 12px;
+    left: 30px;
+}
+
+.ga-content {
+    display: flex;
+    flex-direction: column;
+}
+
+.ga-content h2{
+    font-size: 6.4rem;
+    font-weight: 600;
+    line-height: 5rem;
+}
+
+.fvr h5{
+    font-family: 'Baloo Tamma 2', cursive;
+    font-size: 4.375rem;
+    color: #E4003B;
+    transform: rotate(-15deg);
+}
+
+.ga-toggle {
+    display: flex;
+    align-items: flex-end;
+    margin:0px;
+}
+
+.ga-toggle:hover {
+    cursor: pointer;
+}
+
+.ga-toggle h6{
+    margin:0px;
+    font-weight: 600;
+}
+
+#ga-cross{
+    width: 28px;
+    height: 28px;
+    margin-right: 50px
+}
+
+#footer {
+    margin-top: 100px;
+    padding: 0px 160px 0px 160px;
+}
+
+
+.footer {
+    width: 100%;
+    background-image: url(../images/Mask\ Group\ 5.png);
+    height: auto;
+	display: block;
+}
+
+.inner-footer {
+	width: 95%;
+	margin: auto;
+	padding: 30px 10px;
+	display: flex;
+	flex-wrap: wrap;
+	box-sizing: border-box;
+	justify-content: center;
+}
+
+.footer-items {
+	width: 25%;
+	padding: 10px 20px;
+	box-sizing: border-box;
 }
